# SCOUT

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.superpowers/brainstorm/1867-1777762078/content/: architecture.html
.superpowers/brainstorm/1867-1777762078/state/: server-info
backend/scout/: cache.py  cli.py  config.py  db.py  main.py  orchestrator.py  rate_limit.py
backend/scout/api/: routes_investigate.py  routes_sources.py
backend/scout/models/: __init__.py  db.py  domain.py
backend/scout/sources/: __init__.py  base.py
backend/scout/sources/footprint/: __init__.py  crt_sh.py  github_user.py  gravatar.py  hibp.py
backend/scout/sources/threat/: __init__.py  abuseipdb.py  dns_resolver.py  virustotal.py
backend/tests/: test_api.py  test_cache.py  test_cli.py  test_config.py  test_db.py  test_domain.py  test_orchestrator.py  test_rate_limit.py
backend/tests/test_sources/: test_abuseipdb.py  test_crt_sh.py  test_dns_resolver.py  test_github_user.py  test_gravatar.py  test_hibp.py  test_registry.py  test_virustotal.py
docs/: SCOUT_CLAUDE_CODE_PROMPT.md  SCOUT_PROJECT_PLAN.md
docs/superpowers/specs/: 2026-05-02-scout-mvp-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.css
frontend/src/components/: InvestigationForm.tsx  ModeToggle.tsx  NodeDetailPanel.tsx  ResultsGraph.tsx  ResultsList.tsx
frontend/src/lib/: api.ts  graph.ts
frontend/src/types/: api.ts
