[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scout-toolkit"
version = "0.1.0"
description = "Local-first OSINT toolkit for digital footprint auditing and threat indicator enrichment"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "aiolimiter>=1.1.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "python-multipart>=0.0.9",
    "dnspython>=2.6.0",
]

[project.scripts]
scout = "scout.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-recording>=0.13.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/scout"]

[tool.hatch.build.targets.wheel.sources]
"backend" = ""

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
